k8s/outdated/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: c2-redirect-https
  namespace: devsec
spec:
  redirectScheme:
    scheme: https
    permanent: true
